--- a/hi.ipynb
+++ b/hi.ipynb
@@ -6,18 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyreactflow import ReactFlowWidget\n"
+    "from ipyreactflow import ReactFlowWidget"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae0edd4985e2419ab015322c8af9c982",
+       "model_id": "eea0f5d9d9d94c4c86849aa83a31924d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +46,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -62,5 +64,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
