update to xyflow

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,49 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: ANYWIDGET_HMR=1\n"
+     ]
+    }
+   ],
    "source": [
-    "from ipyreactflow import ReactFlowWidget"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%env ANYWIDGET_HMR=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccd7163dfc2a4e329b0cfe8f35e3354e",
+       "model_id": "48a1ee9a8c8d4054a8f64292ae75ef78",
        "version_major": 2,
-       "version_minor": 0
+       "version_minor": 1
       },
       "text/plain": [
-       "ReactFlowWidget()"
+       "Widget()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from ipyreactflow import ReactFlowWidget\n",
     "w = ReactFlowWidget()\n",
     "w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "w.send('Hi There!')"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -63,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
