--- a/example.ipynb
+++ b/example.ipynb
@@ -27,12 +27,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48a1ee9a8c8d4054a8f64292ae75ef78",
+       "model_id": "37b064a437864c7e8b5eb52eee2dc142",
        "version_major": 2,
        "version_minor": 1
       },
       "text/plain": [
-       "Widget()"
+       "ReactFlowWidget()"
       ]
      },
      "execution_count": 2,
