--- a/example.ipynb
+++ b/example.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: ANYWIDGET_HMR=1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,28 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37b064a437864c7e8b5eb52eee2dc142",
-       "version_major": 2,
-       "version_minor": 1
-      },
-      "text/plain": [
-       "ReactFlowWidget()"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ipyreactflow import ReactFlowWidget\n",
-    "w = ReactFlowWidget()\n",
+    "from ipyreactflow import IntersectionWidget\n",
+    "w = IntersectionWidget()\n",
     "w"
    ]
   },
