--- a/example.ipynb
+++ b/example.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "env: ANYWIDGET_HMR=1\n"
      ]
     }
@@ -23,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d38001425ca4d0c92a7b70f5c36e9f1",
+       "model_id": "12661bb1317646aab971ed164aaf6284",
        "version_major": 2,
        "version_minor": 1
       },
@@ -37,7 +35,7 @@
        "ColorPicker()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.highlighted_nodes"
+    "w.target_node"
    ]
   },
   {
