--- a/example.ipynb
+++ b/example.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12661bb1317646aab971ed164aaf6284",
+       "model_id": "a8c0a16c399a45438040246ba5da76c2",
        "version_major": 2,
        "version_minor": 1
       },
@@ -48,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'green'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "w.target_node"
    ]
